added research lab subtitle

--- a/hugo.toml
+++ b/hugo.toml
@@ -566,7 +566,7 @@ typeit = false
 # FixIt 0.2.12 | NEW Header subtitle config
 [params.header.subtitle]
 # subtitle name, location
-name = " "
+name = "research lab"
 loc = " "
 # whether to use typeit animation for subtitle name
 typeit = false
